Make header and footer images disappear when no longer visible to hide them from over scroll

--- a/_less/main.less
+++ b/_less/main.less
@@ -21,6 +21,13 @@
   right: 0;
 }
 
+.parallax {
+  position: absolute;
+  top: -300px;
+  left: 0;
+  bottom: 0;
+  right: 0;
+}
 
 html {
   body {
@@ -243,6 +250,7 @@ html {
       }
 
       #timer_group {
+        overflow: hidden;
         position: relative;
         height: 500px;
         z-index: 2;
@@ -335,6 +343,7 @@ html {
       }
 
       #travel_group {
+        overflow: hidden;
         position: relative;
         z-index: 0;
         height: 500px;
@@ -342,7 +351,6 @@ html {
           background: url("/img/travel.jpg");
           background-size: cover;
           background-position: 10%;
-          height: 100%;
           z-index: 4;
         }
         #travel_base {
@@ -401,6 +409,7 @@ html {
         }
 
         .white {
+          z-index: 5;
           position: relative;
           input {
             background-color: white;
